fix(magma): fix dark mode with tailwind

--- a/projects/styles/tailwind/dark-mode.css
+++ b/projects/styles/tailwind/dark-mode.css
@@ -1,19 +1,20 @@
 /* forced dark-mode */
 
-@custom-variant dark (
-  &:where(
-    :root:not(.pref-theme-scheme-light).pref-theme-dark,
-    :root.pref-theme-scheme-dark
-  )
-);
+@custom-variant dark {
 
-/* system dark-mode */
-
-@custom-variant dark (
   @media (prefers-color-scheme: dark) {
     &:where(
-      :root:not(.pref-theme-scheme-light).pref-theme-system,
-      :root:not([data-magma-pref-theme])
-    )
+      :root:not(.pref-theme-scheme-light).pref-theme-system *,
+      :root:not([data-magma-pref-theme]) *
+    ){
+      @slot;
+    }
   }
-);
+
+  &:where(
+    :root:not(.pref-theme-scheme-light).pref-theme-dark *,
+    :root.pref-theme-dark *
+  ) {
+    @slot;
+  }
+}
